--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 280px;
-  background: #1e293b;
+  background: #1a2332;
   padding: 24px 0;
   display: flex;
   flex-direction: column;
