--- a/src/pages/Path_player/path_player.css
+++ b/src/pages/Path_player/path_player.css
@@ -90,6 +90,9 @@
   border: 4px solid #16a34a;
   box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
 }
+.node-circle:hover{
+  background: #197b3d
+}
 
 .checkmark {
   color: white;
