--- a/front/src/pages/Path_player/path_player.css
+++ b/front/src/pages/Path_player/path_player.css
@@ -89,6 +89,11 @@
   justify-content: center;
   border: 4px solid #16a34a;
   box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+  transition: background 0.2s;
+}
+
+.node-circle:hover {
+  background: #197b3d;
 }
 
 .checkmark {
@@ -104,6 +109,7 @@
   margin: -2px 0;
   z-index: 1;
 }
+
 /* ===========================
    WIDGET DE LOGIN / CADASTRO
    =========================== */
@@ -271,6 +277,7 @@
     opacity: 1;
   }
 }
+
 /* ======== ESTADOS DOS NÓS ======== */
 .path-node.completed .node-circle {
   background: #22c55e;
@@ -288,12 +295,6 @@
   background: #374151;
   border-color: #1f2937;
   box-shadow: none;
-}
-
-.checkmark {
-  color: white;
-  font-size: 32px;
-  font-weight: bold;
 }
 
 .current-symbol {
