--- a/front/src/pages/Perfil/Perfil.css
+++ b/front/src/pages/Perfil/Perfil.css
@@ -187,6 +187,7 @@
    =========================== */
 .customization-section {
   margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .customization-group {
